--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Masuya",
   "license": "ISC",
   "dependencies": {
-    "express": "4.18.1"
+    "ejs": "3.1.8",
+    "express": "4.18.1",
+    "express-handlebars": "6.0.6",
+    "pug": "3.0.2"
   },
   "devDependencies": {
     "nodemon": "2.0.19"
